Use OOUI for CreatePage form
This also removes fields in CreatePage and RadioRangeBallot that
only added HTML for layout purposes, which are incompatible with
OOUI.

Bug: T271149
Change-Id: I80e87d969deb048d8797bd3fcd3131fa304eaeb6

--- a/modules/ext.securepoll.css
+++ b/modules/ext.securepoll.css
@@ -1,8 +1,3 @@
-/* Hide the submit button at the very top */
-[ name='wpdefault_submit' ] {
-	display: none;
-}
-
 /* Embolden field labels */
 .mw-label {
 	font-weight: bold;
@@ -17,6 +12,10 @@
 .mw-htmlform-field-HTMLAutoCompleteSelectField,
 .securepoll-layout-table {
 	margin: 1em 0;
+}
+
+.mw-htmlform-cloner-create-button {
+	margin-top: 1em;
 }
 
 /* ... but not inside the tables */
