Visually hide the submit button only
IE and Safari ignore the submit button if it is hidden using display: none;
opacity: 0; will allow the browsers to recognize it and the positioning
CSS will take it out of document flow so that it is essentially invisible

Bug: T271834
Change-Id: Ibd9ccc91cd05f4ab15062ead3bd6063814057dc0

--- a/modules/ext.securepoll.css
+++ b/modules/ext.securepoll.css
@@ -1,3 +1,14 @@
+/* The submit button at the top is a hack so it
+ * should be hidden but it cannot be hidden via
+ * display: none due to how IE and Safari ignore
+ * hidden inputs */
+.securepoll-default-submit {
+	position: absolute;
+	height: 1px;
+	overflow: hidden;
+	opacity: 0;
+}
+
 /* Embolden field labels */
 .mw-label {
 	font-weight: bold;
