Add Special:SecurePollLog for oversighting admin actions
The special page can only be accessed by users with the right to
create elections.

Hide the filter form until it is properly built in T271279.

Bug: T271277
Change-Id: I78e7c54644e25df92683b8ff4aba51d6fee7ecdb

--- a/modules/ext.securepoll.special.css
+++ b/modules/ext.securepoll.special.css
@@ -131,3 +131,8 @@ tr.securepoll-exhausted td {
 tr.securepoll-spoilt {
 	font-style: italic;
 }
+
+/* Hide form until T271279 */
+.mw-special-SecurePollLog form {
+	display: none;
+}
