Convert range voting custom column labels to OOUI
Bug: T273043
Change-Id: Idd1887abfb41c78b7ffcc007736bd86780634f13

--- a/modules/ext.securepoll.special.css
+++ b/modules/ext.securepoll.special.css
@@ -131,3 +131,7 @@ tr.securepoll-exhausted td {
 tr.securepoll-spoilt {
 	font-style: italic;
 }
+
+.securepoll-radiorange-messages .oo-ui-textInputWidget .oo-ui-inputWidget-input {
+	width: 7em;
+}
