Use OOUI in PreferentialBallot
Bug: T276903
Change-Id: I6f2605601e21dd9009709db383c67fa20191160f

--- a/modules/ext.securepoll.special.css
+++ b/modules/ext.securepoll.special.css
@@ -120,3 +120,7 @@ tr.securepoll-spoilt {
 .securepoll-radiorange-messages .oo-ui-textInputWidget .oo-ui-inputWidget-input {
 	width: 7em;
 }
+
+.securepoll-option-preferential > .oo-ui-numberInputWidget {
+	width: 4em;
+}
