Update error icons for vote and vote list pages
- Updates icon usage in errors and indicators
- Cleans up unneeded errorLocationIndicator use
- Fixes incorrect id passed in PreferentialBallot error indicator

Bug: T277277
Change-Id: I0a67e97c6be268ebdc73b776a395117a1b9efe2e

--- a/modules/ext.securepoll.special.css
+++ b/modules/ext.securepoll.special.css
@@ -124,3 +124,12 @@ tr.securepoll-spoilt {
 .securepoll-option-preferential > .oo-ui-numberInputWidget {
 	width: 4em;
 }
+
+.securepoll-option-preferential .securepoll-error-location {
+	vertical-align: sub;
+	padding-right: 5px;
+}
+
+.securepoll-error-box .oo-ui-buttonElement {
+	padding-left: 5px;
+}
