Generate STV tally output page
From the resultsLog, display a summary of elected and eliminated
candidates as well as a table showing the per-round calculations and
summaries

Bug: T284585
Change-Id: Id1f8b6a7b36567afd8c817d2896769931c26c4ab

--- a/modules/ext.securepoll.special.css
+++ b/modules/ext.securepoll.special.css
@@ -133,3 +133,23 @@ tr.securepoll-spoilt {
 .securepoll-error-box .oo-ui-buttonElement {
 	padding-left: 5px;
 }
+
+/* Match ol margin to ul margin */
+.election-summary-elected-list,
+.round-summary-tally-list {
+	margin: 0.3em 0 0 1.6em;
+}
+
+.round-summary-candidate-name {
+	display: inline;
+	font-weight: normal;
+}
+
+.round-candidate-elected .round-summary-candidate-name,
+.previously-elected .round-summary-candidate-name {
+	font-weight: bold;
+}
+
+.previously-elected {
+	color: #72777d;
+}
