Add dialog to import dialog
Add button on translate page of an election which opens a import dialog with a page to choose source where content should be fetched from. A parsing page with feedback from import process and with finished process a result page with all imported pages and errors is shown.

Bug: T310909
Change-Id: I17dfaa5168b12b6a927b4b8b9676a40b92ce8607

--- a/modules/ext.securepoll.special.css
+++ b/modules/ext.securepoll.special.css
@@ -25,6 +25,22 @@
 	width: 100%;
 }
 
+.securepoll-trans-table tr {
+	vertical-align: top;
+}
+
+.securepoll-trans-table .trans-id {
+	width: 10%;
+}
+
+.securepoll-trans-table .trans-origin {
+	width: 45%;
+}
+
+.securepoll-trans-table .trans-lang {
+	width: 45%;
+}
+
 .securepoll-error-box {
 	font-size: larger;
 	border: 2px solid;
@@ -153,4 +169,8 @@ tr.securepoll-spoilt {
 
 .previously-elected {
 	color: #72777d;
+}
+
+#sp-translation-selection {
+	margin-top: 16px;
 }
