Allow multiple tallies to be associated with a poll
Why:

* We need to keep a record of previous tallies as following this patch
  we'll allow for re-tallying elections with pre-eliminated candidates
  with the STV tallier.

* Since different tallies may have different results, keeping a record
  is important for maintaining transparency to voters.

What:

* Created a new '/tallies/<electionId>' page with a pager of all tallies
  created for a specific election.

* Moved the tally results page to '/tallies/<electionId>/result/<tallyId>'.

* Tallies can be deleted using at '/tallies/<electionId>/delete/<tallyId>'.

* Updated the existing test mocks to work with changes to tallying.

Bug: T387701
Change-Id: I52aa2489b2a3bc458c468347ce0ba02d64b56c18

--- a/modules/ext.securepoll.css
+++ b/modules/ext.securepoll.css
@@ -18,6 +18,10 @@
 	margin: 1em 0;
 }
 
+.mw-htmlform-submit-buttons {
+	margin-bottom: 1em;
+}
+
 .mw-htmlform-cloner-create-button {
 	margin-top: 1em;
 }
