Prefer a parameter for importing translations in SecurePoll
Change the work done in T310909 to use a user-serviceable parameter
instead of a configuration. This has the bonus of making it easier to
test on different environments without needing to deploy configuration
changes.

- Remove the config SecurePollTranslationImportSourceUrl
- Add new input field for the source API URL
- Validate input before triggering translation import
- Add unit tests

Bug: T387720
Change-Id: Ibdbe436331dbac847cf5a224baee8eb3bc6e9bb4

--- a/modules/ext.securepoll.special.css
+++ b/modules/ext.securepoll.special.css
@@ -290,3 +290,7 @@ ul.securepoll-vote-result-no-vote {
 .securepoll-question-layout > .limits-layout > .limit-label {
 	margin-top: 2px;
 }
+
+.securepoll-import-label-spacing {
+	margin-top: 1em;
+}
