--- a/modules/ext.securepoll.special.less
+++ b/modules/ext.securepoll.special.less
@@ -1,3 +1,5 @@
+@import 'mediawiki.skin.variables.less';
+
 .securepoll-old-vote {
 	color: #a2a9b1;
 	font-style: italic;
@@ -184,7 +186,7 @@ h2.securepoll-vote-result-heading {
 }
 
 .securepoll-vote-result-question-cnt {
-	background-color: #f2f2f2;
+	background-color: @background-color-neutral;
 	padding: 1em;
 	margin: 2em 0;
 }
@@ -199,7 +201,7 @@ p.securepoll-vote-result-question {
 }
 
 .securepoll-vote-result-comment {
-	background-color: #f2f2f2;
+	background-color: @background-color-neutral;
 	padding: 1em;
 }
 
