Replaced the STV vote form's combobox with a drag-and-drop widget
Why:

* It's not intuitive to use a combobox to select ranked candidates as
  it's not clear that multiple candidates can be selected.

* The combobox also didn't clear its value after making a selection
  which may confuse users into thinking the contents of the combobox is
  the final vote.

What:

* The combobox has been replaced with a dual-panel layout where
  candidates can be dragged and dropped between the two panels.

* Existing tests have been updated to reflect the new layout.

Bug: T394536
Change-Id: I3b371b5b868cec47e0cd3f8db4a4a4626dcc7863

--- a/modules/ext.securepoll.special.less
+++ b/modules/ext.securepoll.special.less
@@ -210,11 +210,13 @@ ul.securepoll-vote-result-no-vote {
 
 /** Add styling for STV-Election Form */
 .securepoll-question-layout {
+	position: relative;
 	margin: 7px;
-	max-width: 50em;
+	max-width: 80em;
+	width: fit-content;
 }
 
-.securepoll-question-layout > .oo-ui-draggableGroupElement > .oo-ui-tagItemWidget {
+.securepoll-question-layout .oo-ui-draggableGroupElement > .oo-ui-tagItemWidget {
 	display: flex;
 	align-items: center;
 	border-radius: 7px;
@@ -224,6 +226,28 @@ ul.securepoll-vote-result-no-vote {
 	max-width: fit-content;
 	padding: 1px;
 	margin: 4px;
+}
+
+.securepoll-question-layout .stv-ranking-panel-container {
+	display: flex;
+	gap: 16px;
+}
+
+.securepoll-question-layout .securepoll-question-stv-panel {
+	position: relative;
+	min-width: 400px;
+	flex: 1;
+}
+
+.securepoll-question-layout .stv-panel-header {
+	position: absolute;
+	top: -3em;
+	width: calc( 100% - 32px );
+	text-align: center;
+}
+
+.stv-ranking-draggable-group {
+	min-height: 140px;
 }
 
 .securepoll-question-layout .item-position-index-label {
@@ -246,6 +270,7 @@ ul.securepoll-vote-result-no-vote {
 	text-align: left;
 	text-wrap: auto;
 	vertical-align: text-bottom;
+	overflow-wrap: anywhere;
 }
 
 /* .oo-ui-tagItemWidget is selected for more specificity to override OOUI. */
@@ -265,8 +290,9 @@ ul.securepoll-vote-result-no-vote {
 
 /** Limits layout */
 .securepoll-question-layout > .limits-layout {
-	float: right;
-	margin: 0 8px;
+	position: absolute;
+	top: 16px;
+	right: 12px;
 }
 
 .securepoll-question-layout > .limits-layout > .limit-label {
