Make STV ranking draggable area full height
Why:
* When using STV ranking, the user drags options from one box
  to another.
* The area which the user can drag into does not fill the entire
  box, so the user can attempt to drag the option to an area
  which appears to be a valid place but isn't within the drag
  area.
* Making the height of this droppable / draggable area the same
  height as the border which surrounds it will reduce confusion
  if a user drags an item to somewhere further down the list.

What:
* Add `height: 100%` to `.stv-ranking-draggable-group`
  in ext.securepoll.special.less.

Bug: T400373
Change-Id: Ib20ac1123070a4e68a4c28577ddd17dd93cc0116

--- a/modules/ext.securepoll.special.less
+++ b/modules/ext.securepoll.special.less
@@ -237,6 +237,7 @@ ul.securepoll-vote-result-no-vote {
 
 .stv-ranking-draggable-group {
 	min-height: 140px;
+	height: 100%;
 }
 
 .securepoll-question-layout .item-position-index-label {
